fix table alignment

--- a/src/pages/States/styles.module.scss
+++ b/src/pages/States/styles.module.scss
@@ -1,10 +1,8 @@
 @import "~$styles/variables";
 
 .body {
-  align-self: center;
   display: flex;
   flex-direction: column;
-  max-width: 50%;
 }
 
 .title {
